--- a/style.css
+++ b/style.css
@@ -2,9 +2,58 @@
     background-color: aqua;
 }
 .header-center{
-    padding: 5px;
-    padding-top: 8px;
+    padding: 10px;
+    padding-top: 13px;
 }
 .logo-wight{
     width: 13%;
+}
+.header-navi{
+    display: inline-block;
+}
+.main{
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px 20px 20px;
+}
+.newss{
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px 20px 20px;
+}
+.archiv{
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px 20px 20px;
+}
+.wakans{
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px 20px 20px;
+}
+.kontacts{
+    display: inline-block;
+    font-size: 40px;
+    padding: 20px 20px 20px 20px;
+}
+.posts{
+    background-color: #d7d579;
+}
+.item1{
+    display: inline-block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
+    word-wrap: break-word;
+    width: 500px;
+}
+.item2{
+    display: inline-block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
+    word-wrap: break-word;
+    width: 500px;
 }
