--- a/style.css
+++ b/style.css
@@ -6,54 +6,33 @@
     padding-top: 13px;
 }
 .logo-wight{
-    width: 13%;
+    width: 20%;
+    height: 20%;
 }
 .header-navi{
     display: inline-block;
 }
-.main{
+.menu-item{
     display: inline-block;
-    font-size: 40px;
-    padding: 20px 20px 20px 20px;
+    font-size: 30px;
+    padding: 10px 10px 10px 6px;
+    text-decoration: none;
+    color: darkred;
 }
-.newss{
-    display: inline-block;
-    font-size: 40px;
-    padding: 20px 20px 20px 20px;
-}
-.archiv{
-    display: inline-block;
-    font-size: 40px;
-    padding: 20px 20px 20px 20px;
-}
-.wakans{
-    display: inline-block;
-    font-size: 40px;
-    padding: 20px 20px 20px 20px;
-}
-.kontacts{
-    display: inline-block;
-    font-size: 40px;
-    padding: 20px 20px 20px 20px;
+.menu-item:hover{
+    background: coral;
+    border-radius: 50px;
 }
 .posts{
     background-color: #d7d579;
 }
 .item1{
     display: inline-block;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 60px;
-    margin-right: 60px;
     word-wrap: break-word;
     width: 500px;
 }
 .item2{
     display: inline-block;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 60px;
-    margin-right: 60px;
     word-wrap: break-word;
     width: 500px;
 }
